--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,33 @@ body {
   -webkit-animation: pop-up 1s ease forwards;
   animation: pop-up 1s ease forwards;
 }
+.HeroSec .splide {
+  padding: 1rem 0rem 0rem 0rem !important;
+  height: 90% !important;
+}
+.splide__arrow svg {
+  cursor: pointer;
+  fill: #80808050 !important;
+  color: black !important; /* اللون البني هنا، يمكنك استبداله بلون البني الذي تفضله */
+}
+.splide__arrow svg:focus {
+  outline: none;
+  border: none;
+}
+/* .HeroSec .splide__arrow svg {
+  margin-bottom: 100px;
+} */
+.splide__arrow svg:hover {
+  fill: #3b3b3bb2 !important;
+  color: black !important; /* اللون البني هنا، يمكنك استبداله بلون البني الذي تفضله */
+}
+.cat1 {
+  opacity: 0;
+  display: none;
+  position: absolute;
+  -webkit-animation: pop-up 1s ease forwards;
+  animation: pop-up 1s ease forwards;
+}
 .navbar {
   -o-transition: all 0.3s;
   -webkit-transition: all 0.3s;
@@ -41,6 +68,19 @@ body {
   opacity: 1;
   display: block;
 }
+.par-cat1:hover .cat1 {
+  opacity: 1;
+  display: block;
+}
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+html {
+  scroll-behavior: smooth;
+}
+
 /* container start */
 .container {
   padding-left: 15px;
@@ -48,8 +88,12 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
 /* Small */
 @media (min-width: 768px) {
+  .HeroSec .splide__arrow svg {
+    margin-bottom: 0px;
+  }
   .container {
     width: 750px;
   }
@@ -66,4 +110,22 @@ body {
     width: 1170px;
   }
 }
+
 /* container end */
+@media (max-width: 565px) {
+  .HeroSec {
+    height: 60vh !important;
+  }
+}
+@media (max-width: 420px) {
+  .HeroSec {
+    height: 52vh !important;
+  }
+}
+
+.div-EditCourse div {
+  display: none !important;
+}
+.div-EditCourse:hover div {
+  display: flex !important;
+}
