--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ body {
   height: 90% !important;
 }
 .splide__arrow svg {
+  font-size: 40px;
   cursor: pointer;
   fill: #80808050 !important;
   color: black !important; /* اللون البني هنا، يمكنك استبداله بلون البني الذي تفضله */
@@ -135,4 +136,28 @@ html {
 }
 .Nav-EditCourse a.active {
   color: #ec5252;
+}
+.details-course {
+  -o-transform: scale(0);
+  -webkit-transform: scale(0);
+  -moz-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  -o-transition: transform 0.25s ease;
+  -webkit-transition: transform 0.25s ease;
+  -moz-transition: transform 0.25s ease;
+  -ms-transition: transform 0.25s ease;
+  transition: transform 0.25s ease;
+}
+
+.parent-details-course:hover .details-course {
+  -o-transform: scale(1);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+}
+.splid-Courses-MainPage .splide__track {
+  /* padding-top: 100px; */
+  padding-bottom: 100px;
 }
